# tmsp

./: .gitignore  CLAUDE.md  LICENSE  README.md  debug_trace.py  pyproject.toml  render.yaml
agent/: __init__.py  actions.py  benchmark.py  parallel.py  state_types.py  traversal.py  zero_shot.py
candidate_selector/: __init__.py  config.py  providers.py  selector.py
frontend/: README.md  index.html  package-lock.json  package.json  test-check.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: BenchmarkReportViewer.tsx  GraphViewer.tsx  TrajectoryViewer.tsx  TreeView.tsx  VisualizeReportViewer.tsx
frontend/src/components/shared/: CodeInput.tsx  ConfirmModal.tsx  LLMSettingsPanel.tsx  NodeRewindModal.tsx  SystemPromptAccordion.tsx  index.ts
frontend/src/context/: LLMConfigContext.tsx
frontend/src/features/benchmark/: BenchmarkSidebar.tsx  useBenchmarkState.ts
frontend/src/features/traverse/: TraverseContent.tsx  TraverseSidebar.tsx  index.ts  useTraverseState.ts
frontend/src/features/visualize/: VisualizeContent.tsx  VisualizeSidebar.tsx  (+2 more)
frontend/src/hooks/: index.ts  useAGUIStream.ts  useElapsedTime.ts  useLLMConfig.ts
frontend/src/lib/: agent.ts  api.ts  api.types.ts  benchmark.ts  constants.ts  edgePaths.ts  exportSvg.ts  graphPositioning.ts  graphUtils.ts  nodeStyles.ts  overlayRenderer.ts  sse.ts  textUtils.ts  types.ts
graph/: __init__.py  enums.py  trace_tree.py  types.py
scripts/: generate_types.py
server/: __init__.py  __main__.py  agui_enums.py  app.py  events.py  payloads.py
server/tests/: test_agui_compliance.py
