[project]
name = "tmsp"
version = "0.1.5"
description = "ICD-10-CM Tree Traversal with Multi-Step Processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "burr[tracking]>=0.40",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
tmsp-server = "server.__main__:main"
tmsp-generate-types = "scripts.generate_types:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["graph*", "agent*", "server*", "candidate_selector*", "scripts*"]
exclude = ["frontend*", "static*"]